automated_scheduling.log
/opt/miniconda3/bin/python: can't open file '/Users/macbookairm2/Documents/Seleksi-2025-Tugas-1/run_all.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Scrape.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Storing.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Warehouse/src/Storing.py': [Errno 2] No such file or directory
Scraping...
Storing Scraping...
Storing Warehouse...
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Scrape.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Storing.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Warehouse/src/Storing.py': [Errno 2] No such file or directory
Scraping...
Storing Scraping...
Storing Warehouse...
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Scrape.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Storing.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Warehouse/src/Storing.py': [Errno 2] No such file or directory
Scraping...
Storing Scraping...
Storing Warehouse...
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Scrape.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Storing.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Warehouse/src/Storing.py': [Errno 2] No such file or directory
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 555 job.
✅ JSON files saved to: Data Scraping/data/2025-08-08
Traceback (most recent call last):
  File "/Users/macbookairm2/Seleksi-2025-Tugas-1/Data Scraping/src/Storing.py", line 1, in <module>
    import psycopg2
ModuleNotFoundError: No module named 'psycopg2'
Traceback (most recent call last):
  File "/Users/macbookairm2/Seleksi-2025-Tugas-1/Data Warehouse/src/Storing.py", line 1, in <module>
    import psycopg2
ModuleNotFoundError: No module named 'psycopg2'
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 556 job.
✅ JSON files saved to: Data Scraping/data/2025-08-08
Traceback (most recent call last):
  File "/Users/macbookairm2/Seleksi-2025-Tugas-1/Data Scraping/src/Storing.py", line 1, in <module>
    import psycopg2
ModuleNotFoundError: No module named 'psycopg2'
Traceback (most recent call last):
  File "/Users/macbookairm2/Seleksi-2025-Tugas-1/Data Warehouse/src/Storing.py", line 1, in <module>
    import psycopg2
ModuleNotFoundError: No module named 'psycopg2'
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 556 job.
✅ JSON files saved to: Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 556 job.
✅ JSON files saved to: Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
  File "/Users/macbookairm2/Seleksi-2025-Tugas-1/Data Scraping/src/Scrape.py", line 285
    output_dir = os.path.join(Seleksi-2025-Tugas-1", "Data Warehouse", "Data Scraping", "data", today_str)
                                                                                             ^
SyntaxError: unterminated string literal (detected at line 285)
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 556 job.
✅ JSON files saved to: Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scraped 60 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 556 job.
✅ JSON files saved to: Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scraped 60 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 556 job.
✅ JSON files saved to: Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scraped 60 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Scrape.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Storing.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Warehouse/src/Storing.py': [Errno 2] No such file or directory
Scraping...
Storing Scraping...
Storing Warehouse...
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Scrape.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Scraping/src/Storing.py': [Errno 2] No such file or directory
python3: can't open file '/Users/macbookairm2/Data Warehouse/src/Storing.py': [Errno 2] No such file or directory
Scraping...
Storing Scraping...
Storing Warehouse...
Scraped 60 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scraped 60 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 556 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 555 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 0 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 0 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 555 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 555 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 555 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scraped 40 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/today_str
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scraped 40 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/today_str
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
Scroll ke-28: Tidak ada job baru ditemukan. Berhenti.
Scraped 555 job.
✅ JSON files saved to: Seleksi-2025-Tugas-1/Data Scraping/data/2025-08-08
✅ Semua tabel berhasil dibuat.
✅ Semua index berhasil dibuat.
✅ Semua tabel DW berhasil dibuat!
✅ ETL selesai!
Scraping...
Storing Scraping...
Storing Warehouse...
